# cozmo-python-sdk

./: pyproject.toml
cozmo/: pyproject.toml.bck
cozmo/examples/apps/: remote_control_cozmo.py
cozmo/examples/tutorials/01_basics/: 09_cube_move.py
cozmo/src/cozmo/: opengl.py  robot.py  run.py
