[tool.poetry]
name = "cozmo-fork"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "cozmo_python_sdk"}]

[tool.poetry.dependencies]
python = "^3.10"
cozmo = { path = "./cozmo",  develop = true }
cozmoclad = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
